# ClearPNG

./: .clang-format  .clang-tidy  .clang-tidy-extra  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/modules/: AddPackageTest.cmake  AddTest.cmake  Format.cmake  Tidy.cmake
docs/: CMakeLists.txt  main.md
include/ClearPNG/: color.h  core.h  image.h  util.h
src/: CMakeLists.txt  color.cpp  image.cpp
test/: CMakeLists.txt  utest_color.cpp
